Fixed some issues where a couple of values stored in TimeResult and ChipRead were not being updated and needed to be due to MemStore changes. Added division place to TimeResult. Changed how the EllapsedRelativeToBox gets information and how we pull the wave number from the selected item. Added a method for the user to reset the start clock if they accidentally start it.

--- a/ChronoKeep/UI/MainPages/TimingPage.xaml
+++ b/ChronoKeep/UI/MainPages/TimingPage.xaml
@@ -41,7 +41,15 @@
                         Height="35"
                         HorizontalAlignment="Stretch"
                         SelectionChanged="EllapsedRelativeToBox_SelectionChanged"
-                        Visibility="Collapsed" />
+                        Visibility="Collapsed" >
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel>
+                                <TextBlock Text="{Binding Name}" TextAlignment="Center"/>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
                 <StackPanel
                         Orientation="Horizontal"
                         Width="200"
