--- a/ChronoKeep/UI/Timing/TimingResultsPage.xaml
+++ b/ChronoKeep/UI/Timing/TimingResultsPage.xaml
@@ -48,25 +48,29 @@
                             <ColumnDefinition Width="40"/>  <!-- Gender Place -->
                             <ColumnDefinition Width="60"/>  <!-- Age Group -->
                             <ColumnDefinition Width="40"/>  <!-- Age Group Place -->
-                            <ColumnDefinition Width="110"/>  <!-- Distance -->
+                            <ColumnDefinition Width="{Binding DivisionColWidth}"/>  <!-- Division -->
+                            <ColumnDefinition Width="{Binding DivisionPlaceColWidth}"/>  <!-- Division Place -->
+                            <ColumnDefinition Width="110"/> <!-- Distance -->
                             <ColumnDefinition Width="20"/>  <!-- Type -->
-                            <ColumnDefinition Width="120"/>  <!-- Segment -->
+                            <ColumnDefinition Width="120"/> <!-- Segment -->
                         </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Margin="4,4" Text="{Binding LocationName}" />
-                        <TextBlock Grid.Column="1" Margin="4,4" Text="{Binding Occurrence}" />
-                        <TextBlock Grid.Column="2" Margin="4,4" Text="{Binding SysTime}" />
-                        <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding Time}" />
-                        <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding ChipLapTime}" />
-                        <TextBlock Grid.Column="5" Margin="4,4" Text="{Binding Bib}" />
-                        <TextBlock Grid.Column="6" Margin="4,4" Text="{Binding ParticipantName}" />
-                        <TextBlock Grid.Column="7" Margin="4,4" Text="{Binding PlaceStr}" />
-                        <TextBlock Grid.Column="8" Margin="4,4" Text="{Binding PrettyGender}" />
-                        <TextBlock Grid.Column="9" Margin="4,4" Text="{Binding GenderPlaceStr}" />
-                        <TextBlock Grid.Column="10" Margin="4,4" Text="{Binding AgeGroupName}" />
-                        <TextBlock Grid.Column="11" Margin="4,4" Text="{Binding AgePlaceStr}" />
-                        <TextBlock Grid.Column="12" Margin="4,4" Text="{Binding DistanceName}" />
-                        <TextBlock Grid.Column="13" Margin="4,4" Text="{Binding PrettyType}" />
-                        <TextBlock Grid.Column="14" Margin="4,4" Text="{Binding SegmentName}" />
+                        <TextBlock Grid.Column="0" Margin="4" Text="{Binding LocationName}" />
+                        <TextBlock Grid.Column="1" Margin="4" Text="{Binding Occurrence}" />
+                        <TextBlock Grid.Column="2" Margin="4" Text="{Binding SysTime}" />
+                        <TextBlock Grid.Column="3" Margin="4" Text="{Binding Time}" />
+                        <TextBlock Grid.Column="4" Margin="4" Text="{Binding ChipLapTime}" />
+                        <TextBlock Grid.Column="5" Margin="4" Text="{Binding Bib}" />
+                        <TextBlock Grid.Column="6" Margin="4" Text="{Binding ParticipantName}" />
+                        <TextBlock Grid.Column="7" Margin="4" Text="{Binding PlaceStr}" />
+                        <TextBlock Grid.Column="8" Margin="4" Text="{Binding PrettyGender}" />
+                        <TextBlock Grid.Column="9" Margin="4" Text="{Binding GenderPlaceStr}" />
+                        <TextBlock Grid.Column="10" Margin="4" Text="{Binding AgeGroupName}" />
+                        <TextBlock Grid.Column="11" Margin="4" Text="{Binding AgePlaceStr}" />
+                        <TextBlock Grid.Column="12" Margin="4" Text="{Binding Division}"  Background="Red"/>
+                        <TextBlock Grid.Column="13" Margin="4" Text="{Binding DivisionPlaceStr}"  Background="Red"/>
+                        <TextBlock Grid.Column="14" Margin="4" Text="{Binding DistanceName}" />
+                        <TextBlock Grid.Column="15" Margin="4" Text="{Binding PrettyType}" />
+                        <TextBlock Grid.Column="16" Margin="4" Text="{Binding SegmentName}" />
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
@@ -95,25 +99,29 @@
                     <ColumnDefinition Width="40"/>  <!-- Gender Place -->
                     <ColumnDefinition Width="60"/>  <!-- Age Group -->
                     <ColumnDefinition Width="40"/>  <!-- Age Group Place -->
-                    <ColumnDefinition Width="110"/>  <!-- Distance -->
+                    <ColumnDefinition Width="60" x:Name="DivisionHeaderCol" />  <!-- Division -->
+                    <ColumnDefinition Width="40" x:Name="DivisionPlaceHeaderCol" />  <!-- Division Place -->
+                    <ColumnDefinition Width="110"/> <!-- Distance -->
                     <ColumnDefinition Width="20"/>  <!-- Type -->
-                    <ColumnDefinition Width="120"/>  <!-- Segment -->
+                    <ColumnDefinition Width="120"/> <!-- Segment -->
                 </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0" Margin="4,4" Text="Loc"/>
-                <TextBlock Grid.Column="1" Margin="4,4" Text="Occ"/>
-                <TextBlock Grid.Column="2" Margin="4,4" Text="System Time"/>
-                <TextBlock Grid.Column="3" Margin="4,4" Text="Time"/>
-                <TextBlock Grid.Column="4" Margin="4,4" Text="Chip Time" x:Name="ChipTimeHeader"/>
-                <TextBlock Grid.Column="5" Margin="4,4" Text="Bib"/>
-                <TextBlock Grid.Column="6" Margin="4,4" Text="Name"/>
-                <TextBlock Grid.Column="7" Margin="4,4" Text="Pl" x:Name="placeText"/>
-                <TextBlock Grid.Column="8" Margin="4,4" Text="G"/>
-                <TextBlock Grid.Column="9" Margin="4,4" Text="GP" x:Name="genderPlaceText"/>
-                <TextBlock Grid.Column="10" Margin="4,4" Text="Age Grp"/>
-                <TextBlock Grid.Column="11" Margin="4,4" Text="AP" x:Name="agePlaceText"/>
-                <TextBlock Grid.Column="12" Margin="4,4" Text="Distance"/>
-                <TextBlock Grid.Column="13" Margin="4,4" Text="T"/>
-                <TextBlock Grid.Column="14" Margin="4,4" Text="Segment"/>
+                <TextBlock Grid.Column="0" Margin="4" Text="Loc"/>
+                <TextBlock Grid.Column="1" Margin="4" Text="Occ"/>
+                <TextBlock Grid.Column="2" Margin="4" Text="System Time"/>
+                <TextBlock Grid.Column="3" Margin="4" Text="Time"/>
+                <TextBlock Grid.Column="4" Margin="4" Text="Chip Time" x:Name="ChipTimeHeader"/>
+                <TextBlock Grid.Column="5" Margin="4" Text="Bib"/>
+                <TextBlock Grid.Column="6" Margin="4" Text="Name"/>
+                <TextBlock Grid.Column="7" Margin="4" Text="Pl" x:Name="placeText"/>
+                <TextBlock Grid.Column="8" Margin="4" Text="G"/>
+                <TextBlock Grid.Column="9" Margin="4" Text="GP" x:Name="genderPlaceText"/>
+                <TextBlock Grid.Column="10" Margin="4" Text="Age Grp"/>
+                <TextBlock Grid.Column="11" Margin="4" Text="AP" x:Name="agePlaceText"/>
+                <TextBlock Grid.Column="12" Margin="4" Text="Division" x:Name="divisionText" Background="Red"/>
+                <TextBlock Grid.Column="13" Margin="4" Text="DP" x:Name="divisionPlaceText" Background="Red"/>
+                <TextBlock Grid.Column="14" Margin="4" Text="Distance"/>
+                <TextBlock Grid.Column="15" Margin="4" Text="T"/>
+                <TextBlock Grid.Column="16" Margin="4" Text="Segment"/>
             </Grid>
         </ScrollViewer>
     </Grid>
