Removed code that automatically changed the distance name when importing from a file. Fixed an issue where division wasn't being imported when importing from a file. ImportFileWindow and ModifyParticipantWindow will now ensure they are always visible over other windows. Fixed an minor issue with the margin of the Frame of the Import File Window. Modified how we deal with multiple pages in the ImportFileWindow. EventSpecific Trim() now trims every field it should. Fixed an issue where a birthdate generated when none was parsed wouldn't compare properly with the stored value, also sped up the function by removing the exception catch block. The Done and Cancel buttons are now disabled when the program is attempting to gather more data on participant import. Removed a number of log messages. Changed how we check for Distance names during participant import, which fixed an issue where distance names were erroneously compared in a case sensitive manner. Division is no longer matched with Distance, but is its own specific type to match against.

--- a/ChronoKeep/UI/Import/ImportFileWindow.xaml
+++ b/ChronoKeep/UI/Import/ImportFileWindow.xaml
@@ -13,6 +13,7 @@
         WindowBackdropType="Mica"
         WindowCornerPreference="Round"
         WindowStartupLocation="CenterScreen"
+        Topmost="True"
         >
     <Grid>
         <Grid.RowDefinitions>
@@ -41,7 +42,7 @@
                 <Button x:Name="Done" Height="35" Width="55" VerticalAlignment="Center" HorizontalAlignment="Right" Content="Next" Margin="0,47,68,0" Click="Done_Click" TabIndex="500"/>
                 <Button x:Name="Cancel" Height="35" Width="55" VerticalAlignment="Center" HorizontalAlignment="Right" Content="Cancel" Margin="0,47,6,0" Click="Cancel_Click" TabIndex="501"/>
             </Grid>
-            <Frame x:Name="Frame"  NavigationUIVisibility="Hidden" IsTabStop="False" Grid.Row="1"/>
+            <Frame x:Name="Frame"  NavigationUIVisibility="Hidden" IsTabStop="False" Grid.Row="1" Margin="15,5,15,10"/>
         </Grid>
     </Grid>
 </ui:FluentWindow>
