--- a/ChronoKeep/UI/MainPages/ParticipantsPage.xaml
+++ b/ChronoKeep/UI/MainPages/ParticipantsPage.xaml
@@ -250,19 +250,21 @@
                         <ColumnDefinition Width="175" />  <!-- Last -->
                         <ColumnDefinition Width="75" />   <!-- Gender -->
                         <ColumnDefinition Width="100" />  <!-- Birthday -->
+                        <ColumnDefinition Width="150" />  <!-- Apparel -->
                         <ColumnDefinition Width="120" />  <!-- Phone -->
                         <ColumnDefinition Width="120" />  <!-- Mobile -->
                         <ColumnDefinition Width="150" />  <!-- EC Name -->
                         <ColumnDefinition Width="150" />  <!-- EC Phone -->
                         <ColumnDefinition Width="35" />   <!-- Anon -->
-                                <ColumnDefinition Width="200" />  <!-- Comments -->
-                                <ColumnDefinition Width="150" />  <!-- Other -->
-                                <ColumnDefinition Width="200" />  <!-- Email -->
-                                <ColumnDefinition Width="175" />  <!-- Street -->
-                                <ColumnDefinition Width="50" />  <!-- Apartment -->
-                                <ColumnDefinition Width="120" />  <!-- City -->
-                                <ColumnDefinition Width="50" />  <!-- State -->
-                                <ColumnDefinition Width="60" />  <!-- Country -->
+                        <ColumnDefinition Width="200" />  <!-- Comments -->
+                        <ColumnDefinition Width="150" />  <!-- Other -->
+                        <ColumnDefinition Width="200" />  <!-- Email -->
+                        <ColumnDefinition Width="175" />  <!-- Street -->
+                        <ColumnDefinition Width="50" />   <!-- Apartment -->
+                        <ColumnDefinition Width="120" />  <!-- City -->
+                        <ColumnDefinition Width="50" />   <!-- State -->
+                        <ColumnDefinition Width="70" />   <!-- Zip-->
+                        <ColumnDefinition Width="60" />   <!-- Country -->
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="0" Text="Bib" Margin="2"/>
                     <TextBlock Grid.Column="1" Text="Distance" Margin="2"/>
@@ -270,19 +272,21 @@
                     <TextBlock Grid.Column="3" Text="Last" Margin="2"/>
                     <TextBlock Grid.Column="4" Text="Gender" Margin="2"/>
                     <TextBlock Grid.Column="5" Text="Birthday" Margin="2"/>
-                    <TextBlock Grid.Column="6" Text="Phone" Margin="2"/>
-                    <TextBlock Grid.Column="7" Text="Mobile" Margin="2"/>
-                    <TextBlock Grid.Column="8" Text="EC Name" Margin="2"/>
-                    <TextBlock Grid.Column="9" Text="EC Phone" Margin="2"/>
-                    <TextBlock Grid.Column="10" Text="Anon" Margin="2"/>
-                    <TextBlock Grid.Column="11" Text="Comments" Margin="2"/>
-                    <TextBlock Grid.Column="12" Text="Other" Margin="2"/>
-                    <TextBlock Grid.Column="13" Text="Email" Margin="2"/>
-                    <TextBlock Grid.Column="14" Text="Street" Margin="2"/>
-                    <TextBlock Grid.Column="15" Text="Apt" Margin="2"/>
-                    <TextBlock Grid.Column="16" Text="City" Margin="2"/>
-                    <TextBlock Grid.Column="17" Text="State" Margin="2"/>
-                    <TextBlock Grid.Column="18" Text="Country" Margin="2"/>
+                    <TextBlock Grid.Column="6" Text="Goodies" Margin="2"/>
+                    <TextBlock Grid.Column="7" Text="Phone" Margin="2"/>
+                    <TextBlock Grid.Column="8" Text="Mobile" Margin="2"/>
+                    <TextBlock Grid.Column="9" Text="EC Name" Margin="2"/>
+                    <TextBlock Grid.Column="10" Text="EC Phone" Margin="2"/>
+                    <TextBlock Grid.Column="11" Text="Anon" Margin="2"/>
+                    <TextBlock Grid.Column="12" Text="Comments" Margin="2"/>
+                    <TextBlock Grid.Column="13" Text="Other" Margin="2"/>
+                    <TextBlock Grid.Column="14" Text="Email" Margin="2"/>
+                    <TextBlock Grid.Column="15" Text="Street" Margin="2"/>
+                    <TextBlock Grid.Column="16" Text="Apt" Margin="2"/>
+                    <TextBlock Grid.Column="17" Text="City" Margin="2"/>
+                    <TextBlock Grid.Column="18" Text="State" Margin="2"/>
+                    <TextBlock Grid.Column="19" Text="Zip" Margin="2"/>
+                    <TextBlock Grid.Column="20" Text="Country" Margin="2"/>
                 </Grid>
             </ScrollViewer>
             <ListView 
@@ -308,18 +312,20 @@
                                 <ColumnDefinition Width="175" /> <!-- Last -->
                                 <ColumnDefinition Width="75" />  <!-- Gender -->
                                 <ColumnDefinition Width="100" /> <!-- Birthday -->
+                                <ColumnDefinition Width="150" /> <!-- Apparel -->
                                 <ColumnDefinition Width="120" /> <!-- Phone -->
                                 <ColumnDefinition Width="120" /> <!-- Mobile -->
                                 <ColumnDefinition Width="150" /> <!-- EC Name -->
                                 <ColumnDefinition Width="150" /> <!-- EC Phone -->
                                 <ColumnDefinition Width="35" />  <!-- Anon -->
-                                <ColumnDefinition Width="200" />  <!-- Comments -->
-                                <ColumnDefinition Width="150" />  <!-- Other -->
-                                <ColumnDefinition Width="200" />  <!-- Email -->
-                                <ColumnDefinition Width="175" />  <!-- Street -->
+                                <ColumnDefinition Width="200" /> <!-- Comments -->
+                                <ColumnDefinition Width="150" /> <!-- Other -->
+                                <ColumnDefinition Width="200" /> <!-- Email -->
+                                <ColumnDefinition Width="175" /> <!-- Street -->
                                 <ColumnDefinition Width="50" />  <!-- Apartment -->
-                                <ColumnDefinition Width="120" />  <!-- City -->
+                                <ColumnDefinition Width="120" /> <!-- City -->
                                 <ColumnDefinition Width="50" />  <!-- State -->
+                                <ColumnDefinition Width="70" />  <!-- Zip-->
                                 <ColumnDefinition Width="60" />  <!-- Country -->
                             </Grid.ColumnDefinitions>
                             <TextBlock Grid.Column="0" Text="{Binding Bib}" Margin="2"/>
@@ -328,19 +334,21 @@
                             <TextBlock Grid.Column="3" Text="{Binding LastName}" Margin="2"/>
                             <TextBlock Grid.Column="4" Text="{Binding Gender}" Margin="2"/>
                             <TextBlock Grid.Column="5" Text="{Binding Birthdate}" Margin="2"/>
-                            <TextBlock Grid.Column="6" Text="{Binding Phone}" Margin="2"/>
-                            <TextBlock Grid.Column="7" Text="{Binding Mobile}" Margin="2"/>
-                            <TextBlock Grid.Column="8" Text="{Binding ECName}" Margin="2"/>
-                            <TextBlock Grid.Column="9" Text="{Binding ECPhone}" Margin="2"/>
-                            <TextBlock Grid.Column="10" Text="{Binding PrettyAnonymous}" Margin="2"/>
-                            <TextBlock Grid.Column="11" Text="{Binding Comments}" Margin="2"/>
-                            <TextBlock Grid.Column="12" Text="{Binding Other}" Margin="2"/>
-                            <TextBlock Grid.Column="13" Text="{Binding Email}" Margin="2"/>
-                            <TextBlock Grid.Column="14" Text="{Binding Street}" Margin="2"/>
-                            <TextBlock Grid.Column="15" Text="{Binding Street2}" Margin="2"/>
-                            <TextBlock Grid.Column="16" Text="{Binding City}" Margin="2"/>
-                            <TextBlock Grid.Column="17" Text="{Binding State}" Margin="2"/>
-                            <TextBlock Grid.Column="18" Text="{Binding Country}" Margin="2"/>
+                            <TextBlock Grid.Column="6" Text="{Binding Apparel}" Margin="2"/>
+                            <TextBlock Grid.Column="7" Text="{Binding Phone}" Margin="2"/>
+                            <TextBlock Grid.Column="8" Text="{Binding Mobile}" Margin="2"/>
+                            <TextBlock Grid.Column="9" Text="{Binding ECName}" Margin="2"/>
+                            <TextBlock Grid.Column="10" Text="{Binding ECPhone}" Margin="2"/>
+                            <TextBlock Grid.Column="11" Text="{Binding PrettyAnonymous}" Margin="2"/>
+                            <TextBlock Grid.Column="12" Text="{Binding Comments}" Margin="2"/>
+                            <TextBlock Grid.Column="13" Text="{Binding Other}" Margin="2"/>
+                            <TextBlock Grid.Column="14" Text="{Binding Email}" Margin="2"/>
+                            <TextBlock Grid.Column="15" Text="{Binding Street}" Margin="2"/>
+                            <TextBlock Grid.Column="16" Text="{Binding Street2}" Margin="2"/>
+                            <TextBlock Grid.Column="17" Text="{Binding City}" Margin="2"/>
+                            <TextBlock Grid.Column="18" Text="{Binding State}" Margin="2"/>
+                            <TextBlock Grid.Column="19" Text="{Binding Zip}" Margin="2"/>
+                            <TextBlock Grid.Column="20" Text="{Binding Country}" Margin="2"/>
                         </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
