--- a/ChronoKeep/UI/Timing/DivisionStatsPage.xaml
+++ b/ChronoKeep/UI/Timing/DivisionStatsPage.xaml
@@ -35,23 +35,25 @@
                             <DataTemplate>
                                 <Grid>
                                     <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="60" />
-                                        <ColumnDefinition Width="100" />
-                                        <ColumnDefinition Width="100" />
-                                        <ColumnDefinition Width="60" />
-                                        <ColumnDefinition Width="140" />
-                                        <ColumnDefinition Width="140" />
-                                        <ColumnDefinition Width="100" />
-                                        <ColumnDefinition Width="150" />
+                                        <ColumnDefinition Width="60" />    <!-- Bib -->
+                                        <ColumnDefinition Width="100" />   <!-- First -->
+                                        <ColumnDefinition Width="100" />   <!-- Last -->
+                                        <ColumnDefinition Width="30" />    <!-- Age -->
+                                        <ColumnDefinition Width="60" />    <!-- Gender -->
+                                        <ColumnDefinition Width="140" />   <!-- Phone -->
+                                        <ColumnDefinition Width="140" />   <!-- Mobile -->
+                                        <ColumnDefinition Width="100" />   <!-- LastSeen -->
+                                        <ColumnDefinition Width="150" />   <!-- LastSeenTime -->
                                     </Grid.ColumnDefinitions>
                                     <TextBlock Grid.Column="0" Margin="4,4" Text="{Binding Bib}" />
                                     <TextBlock Grid.Column="1" Margin="4,4" Text="{Binding FirstName}" />
                                     <TextBlock Grid.Column="2" Margin="4,4" Text="{Binding LastName}" />
-                                    <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding Gender}" />
-                                    <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding Phone}" />
-                                    <TextBlock Grid.Column="5" Margin="4,4" Text="{Binding Mobile}" />
-                                    <TextBlock Grid.Column="6" Margin="4,4" Text="{Binding LastSeen}" />
-                                    <TextBlock Grid.Column="7" Margin="4,4" Text="{Binding LastSeenTime}" />
+                                    <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding CurrentAge}" />
+                                    <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding Gender}" />
+                                    <TextBlock Grid.Column="5" Margin="4,4" Text="{Binding Phone}" />
+                                    <TextBlock Grid.Column="6" Margin="4,4" Text="{Binding Mobile}" />
+                                    <TextBlock Grid.Column="7" Margin="4,4" Text="{Binding LastSeen}" />
+                                    <TextBlock Grid.Column="8" Margin="4,4" Text="{Binding LastSeenTime}" />
                                 </Grid>
                             </DataTemplate>
                         </ListView.ItemTemplate>
@@ -77,12 +79,14 @@
                                         <ColumnDefinition Width="60" />
                                         <ColumnDefinition Width="100" />
                                         <ColumnDefinition Width="100" />
+                                        <ColumnDefinition Width="30" />
                                         <ColumnDefinition Width="60" />
                                     </Grid.ColumnDefinitions>
                                     <TextBlock Grid.Column="0" Margin="4,4" Text="{Binding Bib}" />
                                     <TextBlock Grid.Column="1" Margin="4,4" Text="{Binding FirstName}" />
                                     <TextBlock Grid.Column="2" Margin="4,4" Text="{Binding LastName}" />
-                                    <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding Gender}" />
+                                    <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding CurrentAge}" />
+                                    <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding Gender}" />
                                 </Grid>
                             </DataTemplate>
                         </ListView.ItemTemplate>
@@ -107,12 +111,14 @@
                                         <ColumnDefinition Width="60" />
                                         <ColumnDefinition Width="100" />
                                         <ColumnDefinition Width="100" />
+                                        <ColumnDefinition Width="30" />
                                         <ColumnDefinition Width="60" />
                                     </Grid.ColumnDefinitions>
                                     <TextBlock Grid.Column="0" Margin="4,4" Text="{Binding Bib}" />
                                     <TextBlock Grid.Column="1" Margin="4,4" Text="{Binding FirstName}" />
                                     <TextBlock Grid.Column="2" Margin="4,4" Text="{Binding LastName}" />
-                                    <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding Gender}" />
+                                    <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding CurrentAge}" />
+                                    <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding Gender}" />
                                 </Grid>
                             </DataTemplate>
                         </ListView.ItemTemplate>
@@ -138,12 +144,14 @@
                                         <ColumnDefinition Width="60" />
                                         <ColumnDefinition Width="100" />
                                         <ColumnDefinition Width="100" />
+                                        <ColumnDefinition Width="30" />
                                         <ColumnDefinition Width="60" />
                                     </Grid.ColumnDefinitions>
                                     <TextBlock Grid.Column="0" Margin="4,4" Text="{Binding Bib}" />
                                     <TextBlock Grid.Column="1" Margin="4,4" Text="{Binding FirstName}" />
                                     <TextBlock Grid.Column="2" Margin="4,4" Text="{Binding LastName}" />
-                                    <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding Gender}" />
+                                    <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding CurrentAge}" />
+                                    <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding Gender}" />
                                 </Grid>
                             </DataTemplate>
                         </ListView.ItemTemplate>
@@ -169,12 +177,14 @@
                                         <ColumnDefinition Width="60" />
                                         <ColumnDefinition Width="100" />
                                         <ColumnDefinition Width="100" />
+                                        <ColumnDefinition Width="30" />
                                         <ColumnDefinition Width="60" />
                                     </Grid.ColumnDefinitions>
                                     <TextBlock Grid.Column="0" Margin="4,4" Text="{Binding Bib}" />
                                     <TextBlock Grid.Column="1" Margin="4,4" Text="{Binding FirstName}" />
                                     <TextBlock Grid.Column="2" Margin="4,4" Text="{Binding LastName}" />
-                                    <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding Gender}" />
+                                    <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding CurrentAge}" />
+                                    <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding Gender}" />
                                 </Grid>
                             </DataTemplate>
                         </ListView.ItemTemplate>
