--- a/ChronoKeep/UI/API/EditYearPage.xaml
+++ b/ChronoKeep/UI/API/EditYearPage.xaml
@@ -11,8 +11,147 @@
       Title="APIPage1"
       Foreground="{DynamicResource TextFillColorPrimaryBrush}"
       >
-    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2">
-        <Button Content="Edit Event" Height="35" Width="120" HorizontalAlignment="Center" Margin="10,0,10,10" Click="Done_Click"/>
-        <Button Content="Cancel" Height="35" Width="120" HorizontalAlignment="Center" Margin="10,0,10,10" Click="Cancel_Click"/>
+    <StackPanel
+        HorizontalAlignment="Center"
+        VerticalAlignment="Center"
+        >
+        <TextBlock
+            Name="holdingLabel" 
+            Text="Retrieving Year, Please Hold." 
+            FontSize="18" 
+            VerticalAlignment="Center"
+            MaxWidth="250"
+            HorizontalAlignment="Center"
+            TextWrapping="Wrap"
+            Visibility="Visible"
+            Margin="0,10,0,0"
+            />
+        <StackPanel
+            Name="yearPanel"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center" 
+            Visibility="Collapsed"
+            >
+            <DockPanel Margin="0,0,0,5">
+                <TextBlock
+                    Text="Year"
+                    FontSize="15"
+                    Width="60"
+                    VerticalAlignment="Center"
+                    TextAlignment="Right"
+                    Padding="0,0,5,0"
+                    />
+                <TextBox
+                    x:Name="yearBox"
+                    FontSize="15"
+                    Width="220"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Stretch"
+                    IsEnabled="False"
+                    />
+            </DockPanel>
+            <DockPanel Margin="0,0,0,5">
+                <TextBlock 
+                    Text="Date"
+                    FontSize="15"
+                    Width="60"
+                    VerticalAlignment="Center"
+                    TextAlignment="Right"
+                    Padding="0,0,5,0"
+                    />
+                <DatePicker 
+                    Name="dateBox"
+                    FontSize="15"
+                    Width="220"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Stretch"
+                    />
+            </DockPanel>
+            <DockPanel Margin="0,0,0,5">
+                <TextBlock 
+                    Text="Rank By"
+                    FontSize="15"
+                    Width="60"
+                    VerticalAlignment="Center"
+                    TextAlignment="Right"
+                    Padding="0,0,5,0"
+                    />
+                <ComboBox 
+                    Name="rankBox"
+                    FontSize="15"
+                    Width="220"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Stretch"
+                    >
+                    <ComboBoxItem Content="Clock" />
+                    <ComboBoxItem Content="Chip" />
+                </ComboBox>
+            </DockPanel>
+            <ui:ToggleSwitch
+                x:Name="LiveBox"
+                Width="auto"
+                VerticalAlignment="Center"
+                HorizontalAlignment="Center"
+                Margin="0,0,0,5"
+                Content="Live?"
+                IsChecked="False"
+                />
+            <TextBlock
+                HorizontalAlignment="Center"
+                Margin="0,0,0,5"
+                Text="Days Allowed"
+                />
+            <StackPanel
+                Orientation="Horizontal"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Margin="0,0,0,5"
+                >
+                <Slider
+                    Name="DaysAllowedSlider"
+                    Width="150"
+                    Margin="0,0,0,0"
+                    IsSnapToTickEnabled="True"
+                    TickFrequency="1"
+                    Minimum="0"
+                    Maximum="9"
+                    ValueChanged="DaysAllowed_ValueChanged"
+                    />
+                <TextBlock
+                    Name="DaysAllowedText"
+                    Text="0"
+                    Width="20"
+                    Margin="10,0,0,0"
+                    VerticalAlignment="Center"
+                    TextAlignment="Right"
+                    />
+            </StackPanel>
+        </StackPanel>
+        <StackPanel
+            Orientation="Horizontal"
+            HorizontalAlignment="Center"
+            Margin="0,10,0,0"
+            >
+            <Button
+                Name="SaveButton"
+                Content="Save"
+                Height="35"
+                Width="100"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Bottom"
+                Margin="0,0,10,10"
+                Click="Done_Click"
+                IsEnabled="False"
+                />
+            <Button
+                Content="Cancel"
+                Height="35"
+                Width="100"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Bottom"
+                Margin="10,0,0,10"
+                Click="Cancel_Click"
+                />
+        </StackPanel>
     </StackPanel>
 </Page>
