--- a/ChronoKeep/UI/API/EditAPIErrorPage.xaml
+++ b/ChronoKeep/UI/API/EditAPIErrorPage.xaml
@@ -11,7 +11,27 @@
       Title="APIErrorPage"
       Foreground="{DynamicResource TextFillColorPrimaryBrush}"
       >
-    <Grid>
-        <TextBlock Name="errorLabel" Text="Error, unable to continue." TextWrapping="Wrap" MaxWidth="250" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-    </Grid>
+    <StackPanel
+        HorizontalAlignment="Center"
+        VerticalAlignment="Center"
+        >
+        <TextBlock
+            Name="errorLabel"
+            Text="Error, unable to continue."
+            TextWrapping="Wrap"
+            MaxWidth="250"
+            FontSize="18"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            />
+        <Button
+            Content="Close"
+            Height="35"
+            Width="100"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Bottom"
+            Margin="10,10,0,10"
+            Click="Cancel_Click"
+            />
+    </StackPanel>
 </Page>
